<resources>
    <string name="app_name">CompanyManagement</string>
    <string name="hint_username">username</string>
    <string name="hint_password">password</string>
    <string name="auto_login_text">Remember me</string>
    <string name="artist_title">아티스트 목록</string>
    <string name="group_title">그룹 목록</string>
    <string name="login_btn">LOGIN</string>
    <string name="toolbar_add">add</string>
    <string name="toolbar_update">update</string>
    <string name="toolbar_delete">delete</string>
    <string name="main_artist">아티스트</string>
    <string name="main_schedule">일정</string>
    <string name="main_subtitle_singer">가수</string>
    <string name="main_subtitle_actor">배우</string>
    <string name="main_subtitle_talent">탤런트</string>
    <string name="artist_tap_all">All</string>
    <string name="artist_tap_singer">가수</string>
    <string name="artist_tap_actor">배우</string>
    <string name="artist_tap_talent">탤런트</string>
    <string name="schedule_title">스케쥴</string>
    <string name="schedule_today_title">Today\'s</string>
    <string name="schedule_detail_title">스케쥴 상세 목록</string>
    <string name="schedule_detail_name">스케쥴 이름</string>
    <string name="schedule_detail_address">장소</string>
    <string name="schedule_detail_date">날짜</string>
    <string name="schedule_detail_artist">아티스트</string>
    <string name="schedule_detail_content">스케쥴 내용</string>

    <string name="group_detail_schedule">스케줄</string>
    <string name="group_detail_artist">아티스트</string>
    <string name="group_detail_title">그룹</string>
    <string name="group_insert_title">그룹 추가</string>
    <string name="group_update_title">그룹 수정</string>
    <string name="group_update_name">그룹 이름</string>
    <string name="group_update_artist">아티스트</string>
    <string name="artist_detail_category_name">이름</string>
    <string name="artist_detail_category_nickname">활동명</string>
    <string name="artist_detail_category_birth">생년월일</string>
    <string name="artist_detail_category_job">직업</string>
    <string name="artist_detail_category_gender">성별</string>
    <string name="artist_detail_schedule">스케줄</string>
    <string name="artist_detail_title">아티스트 정보</string>
    <string name="artist_detail_eval">평가</string>

    <string name="artist_update_title">아티스트 추가</string>
    <string name="artist_update_name">이름</string>
    <string name="artist_update_artist_name">아티스트 이름</string>
    <string name="artist_update_nickname">활동명</string>
    <string name="artist_update_artist_nickname">활동명 이름</string>
    <string name="artist_update_birth">생년월일</string>
    <string name="artist_update_job">직업</string>
    <string name="artist_update_gender">성별</string>
    <string name="artist_update_gender_female">여자</string>
    <string name="artist_update_gender_male">남자</string>

    <string name="schedule_update_name">스케쥴 이름</string>
    <string name="schedule_update_address">장소</string>
    <string name="schedule_update_date">날짜</string>
    <string name="schedule_update_artist">아티스트</string>
    <string name="schedule_update_content">스케쥴 내용</string>
    <string name="schedule_update_hint">스케쥴 이름</string>
    <string name="schedule_update_place_hint">장소 이름</string>
    <string name="schedule_update_time_format">오전</string>
    <string name="schedule_update_date_picker">00년 00월 00일</string>
    <string name="schedule_update_time_picker">11:30</string>
    <string name="schedule_update_after_time_format">오전</string>
    <string name="schedule_update_after_date_picker">00년 00월 00일</string>
    <string name="schedule_update_after_time_picker">11:30</string>
    <string name="schedule_update_add_chip">+</string>
    <string name="schedule_update_content_hint">스케쥴 내용</string>

    <string name="setting_logout">로그아웃</string>
    <string name="setting_help">도움말</string>
    <string name="setting_versionInformation">버전 정보</string>
    <string-array name="score_list">
        <item>팬</item>
        <item>경영</item>
        <item>잠재력</item>
        <item>수익</item>
        <item>스캔들</item>
    </string-array>
    <string name="job_actor">배우</string>
    <string name="job_singer">가수</string>
    <string name="job_talent">탤런트</string>
    <string name="gender_male">남자</string>
    <string name="gender_female">여자</string>
    <string name="ok">확인</string>
    <string name="cancel">취소</string>
    <string name="delete_message">삭제하시겠습니까?</string>
    <string name="fan">팬</string>
    <string name="executive">경영</string>
    <string name="potential">잠재력</string>
    <string name="revenue">수익</string>
    <string name="scandal">스캔들</string>
    <integer name="score_size">4</integer>
    <integer name="score_start">0</integer>
    <string name="eval_score">평가 지수</string>
    <string name="error_message_empty">모든 내용을 입력해 주세요.</string>
    <string name="permission_deny">권한을 허가해주세요.</string>
    <string name="version_info">0.1 version</string>
    <string name="auto_login">autoLogin</string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="before">Before</string>
    <string name="after">After</string>
    <string name="schedule_update">스케쥴 수정</string>
    <string name="schedule_insert">스케쥴 추가</string>
    <string name="from_schedule">schedule</string>
    <string name="from_group">group</string>
    <string name="afternoon">오후</string>
    <string name="login_id">admin</string>
    <string name="login_password">123456</string>
    <string name="login_wrong_text">잘못된 입력입니다.</string>
    <string name="setting_title">설정</string>
    <string name="company_name">회사 : 쏘쓰뮤직</string>

</resources>