<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.artist.update.ArtistUpdateFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/tb_artist_update"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:menu="@menu/menu_update"
                app:navigationIcon="@drawable/ic_arrow_back_24"
                app:title="@string/artist_update_title"
                app:titleTextAppearance="@style/title"
                app:titleTextColor="?attr/colorOnSurface" />

            <ImageButton
                android:id="@+id/ib_artist"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="@dimen/large_margin"
                android:background="#DA8B8B"
                android:src="@drawable/ic_add_40"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tb_artist_update" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="24dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="24dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_artist_name_title"
                style="@style/subTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_margin"
                android:text="@string/artist_update_name"
                android:textColor="?attr/colorOnSurface"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/ib_artist" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_artist_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/tiny_margin"
                android:hint="@string/artist_update_artist_name"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="@id/gl_end"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/tv_artist_name_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/te_artist_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_artist_nickname_title"
                style="@style/subTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/artist_update_nickname"
                android:textColor="?attr/colorOnSurface"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/tl_artist_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_artist_nickname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/tiny_margin"
                android:hint="@string/artist_update_artist_nickname"
                app:endIconMode="clear_text"
                app:layout_constraintEnd_toEndOf="@id/gl_end"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/tv_artist_nickname_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/te_artist_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_artist_birth_title"
                style="@style/subTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/artist_update_birth"
                android:textColor="?attr/colorOnSurface"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/tl_artist_nickname" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tl_artist_birth"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/tiny_margin"
                android:hint="00.00.00"
                app:layout_constraintEnd_toEndOf="@id/gl_end"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/tv_artist_birth_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tv_artist_birth"
                    android:layout_width="match_parent"
                    android:focusable="false"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_artist_job_title"
                style="@style/subTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/artist_update_job"
                android:textColor="?attr/colorOnSurface"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/tl_artist_birth" />



            <Spinner
                android:id="@+id/sp_artist_job"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:entries="@array/job_array"
                app:layout_constraintEnd_toEndOf="@id/gl_end"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/tv_artist_job_title" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_artist_gender_title"
                style="@style/subTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/small_margin"
                android:text="@string/artist_update_gender"
                android:textColor="?attr/colorOnSurface"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/sp_artist_job" />

            <RadioGroup
                android:id="@+id/rg_artist_gender"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/tiny_margin"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="@id/gl_end"
                app:layout_constraintStart_toStartOf="@id/gl_start"
                app:layout_constraintTop_toBottomOf="@id/tv_artist_gender_title">

                <RadioButton
                    android:id="@+id/radioButtonFemale"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/artist_update_gender_female" />

                <RadioButton
                    android:id="@+id/radioButtonMale"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/artist_update_gender_male" />
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>