<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context=".ui.login.LoginFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_login_start"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_login_end"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="80dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/sesac_logo"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/idLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/hint_username"
            app:endIconMode="clear_text"
            app:startIconDrawable="@drawable/ic_baseline_perm_identity_24"
            app:layout_constraintEnd_toEndOf="@id/gl_login_end"
            app:layout_constraintStart_toStartOf="@id/gl_login_start"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/idET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/body"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/hint_password"
            app:endIconMode="password_toggle"
            app:startIconDrawable="@drawable/ic_baseline_lock_24"
            app:layout_constraintEnd_toEndOf="@id/gl_login_end"
            app:layout_constraintStart_toStartOf="@id/gl_login_start"
            app:layout_constraintTop_toBottomOf="@+id/idLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/body"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auto_login_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/gl_login_start"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
        app:layout_constraintVertical_bias="0.058" />

    <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="152dp"
            style="@style/title"
            android:textColor="@color/textLight"
            android:text="@string/login_btn"
            android:background="@drawable/login_btn_style"
            app:layout_constraintTop_toBottomOf="@id/checkBox"
            app:layout_constraintEnd_toEndOf="@id/gl_login_end"
            app:layout_constraintStart_toStartOf="@id/gl_login_start"
            app:layout_constraintHorizontal_bias="0.0"
             />


</androidx.constraintlayout.widget.ConstraintLayout>