<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tb_setting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="설정"
        app:titleTextAppearance="@style/title"
        app:titleTextColor="?attr/colorOnSurface" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/settingGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="80dp" />

    <ImageView
        android:id="@+id/iv_sesac_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo_sesac"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingGuideline" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_setting_company"
        style="@style/subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="회사 : 쏘쓰뮤직"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_sesac_logo" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="350dp" />

    <Button
        android:id="@+id/btn_setting_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/textLight"
        android:text="@string/setting_logout"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="@id/guideline4" />

    <Button
        android:id="@+id/btn_setting_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/textLight"
        android:text="@string/setting_help"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btn_setting_logout" />

    <Button
        android:id="@+id/btn_setting_versionInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/textLight"
        android:text="@string/setting_versionInformation"
        android:textColor="@color/text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btn_setting_help" />


</androidx.constraintlayout.widget.ConstraintLayout>