<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.group.update.GroupUpdateFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tb_group_update"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_update"
        app:title="@string/group_update_title"
        app:titleTextAppearance="@style/title"
        app:titleTextColor="?attr/colorOnSurface" />


    <ImageButton
        android:id="@+id/ib_group"
        android:layout_width="@dimen/medium_image_margin_width"
        android:layout_height="@dimen/medium_image_margin_height"
        android:layout_marginTop="@dimen/large_margin"
        android:scaleType="fitXY"
        android:src="@drawable/ic_add_40"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/tb_group_update" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="24dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_group_name_title"
        style="@style/subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/large_margin"
        android:text="@string/group_update_name"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/ib_group" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_group_name"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tiny_margin"
        android:hint="@string/group_update_name"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/tv_group_name_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/te_group_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_group_update_artist"
        style="@style/subTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/group_update_artist"
        android:textColor="?attr/colorOnSurface"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/tl_group_name" />
    `

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/cg_artist_update"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tiny_margin"
        app:chipSpacingHorizontal="4dp"
        app:layout_constraintEnd_toEndOf="@id/gl_end"
        app:layout_constraintStart_toStartOf="@id/gl_start"
        app:layout_constraintTop_toBottomOf="@id/tv_group_update_artist"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/c_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="+"
            android:textAlignment="center" />

    </com.google.android.material.chip.ChipGroup>

</androidx.constraintlayout.widget.ConstraintLayout>